langband/zterm/langband.h

/*** Pointers to Functions of special types (for various purposes) ***/

typedef enum {
    LISPSYS_CMUCL     = 0,
    LISPSYS_ACL       = 1,
    LISPSYS_CLISP     = 2,
    LISPSYS_LISPWORKS = 3,
    LISPSYS_SBCL      = 4,
    LISPSYS_CORMAN    = 5,
    LISPSYS_OPENMCL   = 6,
    LISPSYS_BAD       = 20
} LISP_SYSTEMS;
INTERFACE int lbui_load_gfx_image(const char *fname, int idx, unsigned int transcolour);
INTERFACE int lbui_load_texture(int idx, const char*filename, int twid, int thgt, int alpha);
INTERFACE int lbui_get_image_width(int idx);
INTERFACE int lbui_get_image_height(int idx);
INTERFACE int lbui_get_window_width();
INTERFACE int lbui_get_window_height();
INTERFACE int lbui_install_font_in_frame(int win_num, const char *font, int ptsize, int style);
// this will change
INTERFACE int lbui_set_idx_intvalue(int idx, int value);
INTERFACE int lbui_set_idx_stringvalue(int idx, const char*value);
INTERFACE const char *lbui_get_idx_value(int idx);
INTERFACE int lbui_current_ui();
//INTERFACE void print_coloured_token(int wantedTerm, int colour, int token, int row, int col);
//INTERFACE void print_coloured_stat(int wantedTerm, int colour, int stat, int row, int col);
//INTERFACE void print_coloured_number(int wantedTerm, int colour, long number, int padding, int row, int col);
INTERFACE int lbui_init_c_side(const char *ui, const char *sourcePath,
			       const char *confPath, const char *gfxPath,
			       int win_wid, int win_hgt, int extra_flags);
INTERFACE void lbui_set_lisp_system(LISP_SYSTEMS type);
//#ifdef WIN32
//INTERFACE int setHINST(long val);
//#else
INTERFACE void lbui_set_lisp_callback(char *name, void *ptr);
//#endif



INTERFACE int lbui_transparent_blit(short win_num, short x, short y, unsigned int img, short flags);
INTERFACE int lbui_full_blit(short win_num, short x, short y, unsigned int img, short flags);
INTERFACE int lbui_clear_coords(short win_num, short x, short y, short w, short h);
INTERFACE int lbui_flush_coords(short win_num, short x, short y, short w, short h);
//INTERFACE int lbui_get_event(int option);
INTERFACE int lbui_cleanup_c_side(void);
INTERFACE int lbui_listen_for_event(int option);
INTERFACE unsigned lbui_get_internal_time();
INTERFACE int lbui_flip_framebuffer();